test(starknet): fix chainId initialization in argent tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,7 @@ env:
   STARKNET_RPC: http://localhost:5050
   DEVNET_DUMP_PATH: /devnet-dump.json
   AVNU_RPC: https://sepolia.api.avnu.fi
+  STARKLI_VERSION: 0.2.9
 
 jobs:
   lint:
@@ -37,9 +38,11 @@ jobs:
       - name: Flutter setup
         uses: ./.github/actions/flutter-setup
       - uses: bluefireteam/melos-action@v3
+      - run: melos bootstrap
       - name: Install asdf
         uses: asdf-vm/actions/setup@v3
-      - run: melos bootstrap
+      - name: Install starkli
+        run: melos asdf:starkli
       - name: Retrieve starknet devnet version
         shell: bash
         run: |
@@ -53,10 +56,8 @@ jobs:
             shardlabs/starknet-devnet-rs:$STARKNET_DEVNET_VERSION -- \
             starknet-devnet --host 0.0.0.0 --seed 0 --dump-path $DEVNET_DUMP_PATH --state-archive-capacity full
             sleep 3  # Wait for 3 seconds for the Docker container to initialize
-      - name: Declare Argent account
-        run: |
-          melos asdf:starkli
-          melos contracts:argent:declare
+      - name: Declare Argent contract
+        run: melos contracts:declare
       - run: melos test:dart:integration
       - name: Cleanup
         if: always()
