CI: fix argent contract declare

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,8 +56,8 @@ jobs:
             shardlabs/starknet-devnet-rs:$STARKNET_DEVNET_VERSION -- \
             starknet-devnet --host 0.0.0.0 --seed 0 --dump-path $DEVNET_DUMP_PATH --state-archive-capacity full
             sleep 3  # Wait for 3 seconds for the Docker container to initialize
-      - name: Declare Argent contract
-        run: melos contracts:declare
+      - name: Devnet setup
+        uses: ./.github/actions/devnet-setup
       - run: melos test:dart:integration
       - name: Cleanup
         if: always()
