--- a/packages/starknet_provider/pubspec.yaml
+++ b/packages/starknet_provider/pubspec.yaml
@@ -11,8 +11,10 @@ dependencies:
   freezed_annotation: ^2.4.4
   http: ^1.2.2
   json_annotation: ^4.9.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
+  mockito: ^5.4.0
   build_runner: ^2.4.13
   freezed: ^2.5.7
   json_serializable: ^6.8.0
