Fix aicoderabbit recommendations

--- a/.env.devnet
+++ b/.env.devnet
@@ -4,6 +4,7 @@ export PATH=$PATH:$(pwd)/scripts
 
 set -a # Automatically export all variables
 STARKNET_RPC="http://0.0.0.0:5050/rpc"
+STARKNET_WSS="wss://sepolia-pathfinder-rpc.spaceshard.io/rpc/v0_8"
 STARKNET_CHAIN_ID="SN_SEPOLIA"
 SALT="0x42"
 DEVNET_DUMP_PATH="./assets/devnet-dump.json"
