--- a/.env.ci
+++ b/.env.ci
@@ -1,6 +1,7 @@
 FLUTTER_VERSION=3.27.1
 JAVA_VERSION=21
 STARKNET_RPC=http://localhost:5050
+STARKNET_WSS=wss://sepolia-pathfinder-rpc.spaceshard.io/rpc/v0_8
 DEVNET_DUMP_PATH=/devnet-dump.json
 
 STARKNET_ACCOUNT=.starkli/account_0.json
