--- a/packages/starknet_provider/pubspec.yaml
+++ b/packages/starknet_provider/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   http: ^1.2.2
   json_annotation: ^4.9.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   build_runner: ^2.4.13
