--- a/examples/mobile_wallet_example/web/manifest.json
+++ b/examples/mobile_wallet_example/web/manifest.json
@@ -1,7 +1,8 @@
 {
     "name": "mobile_wallet_example",
     "short_name": "mobile_wallet_example",
-    "start_url": ".",
+    "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
