--- a/packages/starknet_paymaster/pubspec.yaml
+++ b/packages/starknet_paymaster/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   meta: ^1.9.1
   crypto: ^3.0.3
   convert: ^3.1.1
+  starknet:
+    path: ../starknet
 
 dev_dependencies:
   build_runner: ^2.4.7
