--- a/packages/starknet_paymaster/pubspec.yaml
+++ b/packages/starknet_paymaster/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   meta: ^1.9.1
   crypto: ^3.0.3
   convert: ^3.1.1
-  starknet:
-    path: ../starknet
+  # Using starknet_provider for core types to avoid circular dependency
+  starknet_provider: ^0.2.0
 
 dev_dependencies:
   build_runner: ^2.4.7
