--- a/packages/starknet_paymaster/pubspec.yaml
+++ b/packages/starknet_paymaster/pubspec.yaml
@@ -8,13 +8,13 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
+  dio: ^5.4.3+1
   http: ^1.1.0
   json_annotation: ^4.8.1
   meta: ^1.9.1
   crypto: ^3.0.3
   convert: ^3.1.1
-  # Using starknet_provider for core types to avoid circular dependency
-  starknet_provider: ^0.2.0
+  starknet: any
 
 dev_dependencies:
   build_runner: ^2.4.7
